--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,32 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+  <style>
+    body {
+      width: 70%;
+      min-width: 800px;
+      margin: 0 auto 2em auto;
+      padding-top: 2em;
+      text-align: center;
+      background-color: #BDF271;
+    }
+    h1 {
+      font-family: 'Merriweather', arial, serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-size: 4em;
+      text-shadow: 0px 1px 0px #ffffff;
+    }
+    textarea {
+      width: 20em;
+      height: 30em;
+    }
+  </style>
 </head>
 <body>
-
+  <h1>stem.</h1>
 <%= yield %>
 
 </body>
